// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingButton > renders the children correctly > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
  >
    <span>
      Test Button
    </span>
  </button>
</div>
`;

exports[`LoadingButton > renders the custom loading icon > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
    disabled=""
  >
    <span>
      Test Button
    </span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check ms-1 fa-spin fa-fw"
      data-icon="check"
      data-prefix="fas"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`LoadingButton > renders the loading spinner at the end position > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
    disabled=""
  >
    <span>
      Test Button
    </span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-spinner ms-1 animate-spin fa-spin fa-fw"
      data-icon="spinner"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M208 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm0 416a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM48 208a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm368 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM75 369.1A48 48 0 1 1 142.9 437 48 48 0 1 1 75 369.1zM75 75A48 48 0 1 1 142.9 142.9 48 48 0 1 1 75 75zM437 369.1A48 48 0 1 1 369.1 437 48 48 0 1 1 437 369.1z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`LoadingButton > renders the loading spinner at the start position > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-spinner me-1 animate-spin fa-spin fa-fw"
      data-icon="spinner"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M208 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm0 416a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM48 208a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm368 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM75 369.1A48 48 0 1 1 142.9 437 48 48 0 1 1 75 369.1zM75 75A48 48 0 1 1 142.9 142.9 48 48 0 1 1 75 75zM437 369.1A48 48 0 1 1 369.1 437 48 48 0 1 1 437 369.1z"
        fill="currentColor"
      />
    </svg>
    <span>
      Test Button
    </span>
  </button>
</div>
`;
